--- a/doc/practicum.Rmd
+++ b/doc/practicum.Rmd
@@ -2,8 +2,8 @@
 title: "Intra-Party Affect"
 author: "Rob Lytle"
 output: pdf_document
-abstract: "How do partisans think about their *own* party? Inter-party affective divisions have been widely identified by scholars of partisanship and public opinion. Increasingly, Republican and Democratic partisans have come to dislike members of their political outgroup. What has been lost in these discussions is an appraisal of individuals perceptions of and attitudes towards their in-party, which are generally held to be both stable and broadly positive. In this study, I leverage time-series survey data to identify substantively meaningful shifts in voters' attitudes towards their own party. Additionally, I an original survey experiment interrogating the role played by primary elections in driving behavioral and attitudinal differences between co-partisans." 
-bibliography: references.bib
+abstract: "How do partisans think about their *own* party? Inter-party affective divisions have been widely identified by scholars of partisanship and public opinion. Increasingly, Republican and Democratic partisans have come to dislike members of their political outgroup. What has been lost in these discussions is an appraisal of individuals perceptions of and attitudes towards their in-party, which are generally held to be both stable and broadly positive. In this study, I leverage time-series survey data to identify substantively meaningful shifts in voters' attitudes towards their own party. Additionally, I conduct an original survey experiment interrogating the role played by primary elections in driving behavioral and attitudinal differences between co-partisans." 
+bibliography: references2.bib
 header-includes:
 - \usepackage[margin=1in]{geometry}
 - \usepackage{caption}
@@ -67,7 +67,13 @@ This is not particularly surprising on its own. Sanders campaigned against the p
 
 ## Partisanship
 
-Many scholars have noted a decline in positive feelings towards members of other political parties. @iyengar2012affect
+Many scholars have noted a decline in positive feelings towards members of other political parties [@iyengar2012, @ahler2018, @iyengar2018, @mason2015]. The downward spiral of attitudes towards the out-party (and political out-groups more generally) is almost always discussed in the context of "affective polarization" in the mass public, a process by which partisans grow to "increasingly dislike, even loathe, their opponents" [@iyengar2012]. Scholars of political polarization have paid far less attention to the attitudes of partisans towards their own party, which are generally held to be overwhelmingly warm within parties and stable across time. @iyengar2018 goes as far as to argue that attitudes towards one's own party are largely unimportant in informing political behavior.
+
+Recent work has challenged the monolithic characterization of intra-party attitudes. @groenendyk2020 argues that intra-party polarization is occuring along ideological lines as more self-identified moderate Democrats and Republicans become less enthusiastic about their parties while their co-partisans on the left and right respectively grow more favorable towards the party. While I enthusiastically agree that intra-party attitudes are more heterogeneous than is typically thought, I am skeptical that partisans' ideology is a driving force behind increasing in-party heterogeneity. 
+
+The accuracy of ideological self-assessments is dubious. Symbolic values and ideological identifiers have little relationship to individuals' actually held political beliefs [@zaller1992, @mclosky1984, @ahler2018, @ahler2015 @mason2018]. Individuals have little idea of what views are typical of a party or ideology and which are heterodox. Partisans self identification as "moderate" or "extreme" may well inform their disposition towards their party but there is no guarantee that those individuals would recognize those  who identify as their "co-ideologues" as such. Thus, characterization of parties as internally ideologically polarized is conceptually fraught given the evidence available.
+
+Setting aside the issue of unreliable ideological self reports, there is reason to doubt that the extreme wings of the parties are the most enthusiastic supporters. Particularly since the 2016 Democratic Primaries, journalism and scholarship has been rife with accounts of the animosity exhibited by the activists and elected officials on the party's left towards the more centrist mainline of the party [@azari2017, @thompson2020]. @masket2020 details lingering animosity between supporters and staffers for the 2016 campaigns of Bernie Sanders and Hillary Clinton (as well as a disdain for individuals associated with the Sanders campaign expressed by former Martin O'Malley organizers). Additionally, supporters of the 2016 Sanders and Trump candidacies were motivated largely by distrust in government [@dyck2018]. It is difficult to square these findings with a
 
 ## Primaries
 
@@ -278,6 +284,12 @@ df_in_means <- df_primaries%>%
 	summarize(mean_ft = weighted.mean(therm_inparty, weight, na.rm = TRUE))%>%
 	glimpse()
 
+df_out_means <- df_primaries%>%
+	group_by(primary_vote_simple, year, pid_3)%>%
+	summarize(mean_ft = weighted.mean(therm_outparty, weight, na.rm = TRUE))%>%
+	glimpse()
+
+
 
 ```
 
@@ -289,29 +301,7 @@ From 2004--2016 the variation within in-party feeling thermometer ratings has in
 As variance increases, so to has the proportion of partisans who rate their own party below a 50---an inherently meaningful threshold indicating that partisans are more cold than warm toward their own party. Indeed, 10% of Democrats and almost 20% of Republicans are found to be cold towards their own party in 2016 (up from 5% each in 2004). This level of intra-party coldness held steady among Democrats into the 2020 election cycle, but dropped precipitously among Republicans.
 
 
-```{r below-50, echo = FALSE}
-gg_below_50_ns <- ggplot(mct_prop_ns, aes(x = year, y = prop_50_below)) +
-  geom_line(aes(linetype = pid_3, color = pid_3), position = dodge, size = 1) + 
-  #  geom_smooth(aes(linetype = pid_3_sort, color = pid_3_sort), span = .3, se = FALSE) +
-  geom_linerange(aes(color = pid_3, ymin = prop_50_below - 2*se_50_below, ymax = prop_50_below + 2*se_50_below), position = dodge) +
-  geom_point(aes(shape = pid_3, size = 1, color = pid_3), position = dodge) +
-  scale_color_manual(values = c("Democrat" = "dodgerblue4",
-                                "Republican" = "firebrick4")) +
-  scale_linetype_manual(values = c("Democrat" = "longdash",
-                                   "Republican" = "solid")) +
-  theme(legend.position = c(0.1, 0.7)) +
-  guides(size = "none") +
-  labs(x = "Year", 
-       y = "Proportion",
-       color = "Party ID",
-       linetype = "Party ID",
-       shape = "Party ID",
-       title = "Proportion of Partisans Below 50 In-Party FT",
-       subtitle = "95% CI Given With Errorbar") #+
-#  facet_wrap(vars(pid_str))
-gg_below_50_ns
 
-```
 ***Fig 3:** The proportion of partisans cold towards their own party increased substantially between 2004 and 2016.*
 
 These trends in in-party affect reinforce the argument that partisans are not an affective monolith---love for the in-party is not universal within a party, nor is it stable across time. More notably, this temporal instability is itself increasing.
@@ -352,7 +342,7 @@ gg_mean_ft_ns <- ggplot(party_fts_ns_joined, aes(x = year, y = mean)) +
 gg_mean_ft_ns
 ```
 
-```{r ridge-plot}
+```{r ridge-plot, eval = FALSE}
 
 # Might ditch this for the plot of prop cold
 ridge_df_all <- cdf_trimmed%>%
@@ -381,6 +371,29 @@ ggplot(ridge_df_all, aes(x = therm_inparty, y = year_fct, fill = stat(x), color 
   theme(#panel.grid.major = element_blank(), 
         panel.grid.minor = element_blank(),
         panel.background = element_blank())
+```
+```{r below-50, echo = FALSE}
+gg_below_50_ns <- ggplot(mct_prop_ns, aes(x = year, y = prop_50_below)) +
+  geom_line(aes(linetype = pid_3, color = pid_3), position = dodge, size = 1) + 
+  #  geom_smooth(aes(linetype = pid_3_sort, color = pid_3_sort), span = .3, se = FALSE) +
+  geom_linerange(aes(color = pid_3, ymin = prop_50_below - 2*se_50_below, ymax = prop_50_below + 2*se_50_below), position = dodge) +
+  geom_point(aes(shape = pid_3, size = 1, color = pid_3), position = dodge) +
+  scale_color_manual(values = c("Democrat" = "dodgerblue4",
+                                "Republican" = "firebrick4")) +
+  scale_linetype_manual(values = c("Democrat" = "longdash",
+                                   "Republican" = "solid")) +
+  theme(legend.position = c(0.1, 0.7)) +
+  guides(size = "none") +
+  labs(x = "Year", 
+       y = "Proportion",
+       color = "Party ID",
+       linetype = "Party ID",
+       shape = "Party ID",
+       title = "Proportion of Partisans Below 50 In-Party FT",
+       subtitle = "95% CI Given With Errorbar") #+
+#  facet_wrap(vars(pid_str))
+gg_below_50_ns
+
 ```
 
 ```{r primaries-plots, echo=FALSE,warning=FALSE}
@@ -465,18 +478,131 @@ grid.arrange(arrangeGrob(p2, p1,
 																				 top = text_grob("Distribution of Partisan Warmth\n by Primary Vote", vjust = 1, face = "bold"),
 																				 left = text_grob("Density", rot = 90, vjust = 1, face = "bold"),
 																			   bottom = text_grob("Feeling Thermometer", face = "bold")))
+
+
+```
+
+```{r primaries-table}
+gm_3 <- tibble::tribble(
+  ~raw,        ~clean,          ~fmt,
+  "nobs",      "N",             0,
+  "r.squared", "R Sq.", 2,
+  "adj.r.squared", "Adj. R Sq.", 2)
+
+# not including ideology var because this  is probably just a proxy for partisanship
+cm_3 <- c("primary_vote_simpleLoser" = "Primary Loss",
+          "year2012" = "2012",
+          "year2016" = "2016", 
+          "year2020" = "2020",
+          "(Intercept)" = "Constant") 
+
+df_primaries%>%
+  pivot_longer(cols = c(therm_inparty, therm_outparty),
+               names_to = "therm_name",
+               values_to = "therm_val") %>%
+  mutate(therm_name = recode(therm_name,
+                             "therm_inparty" =  "In-party",
+                             "therm_outparty" = "Out-Party"),
+         group_name = paste(therm_name,
+                            pid_3,
+                            sep = " - "),
+         ) %>% 
+  group_by(group_name,
+           pid_3,
+           therm_name)%>%
+  nest_by() %>% 
+  mutate(fit = list(lm(therm_val ~ primary_vote_simple + year, data = data,  weights = weight)))%>%
+  pull(fit, name = c(pid_3))%>%
+  modelsummary(output = "gt",
+               gof_map = gm_3,
+               coef_map = cm_3,
+               stars = TRUE) %>% 
+  tab_spanner(columns = 2:3, label = "In-Party") %>% 
+    tab_spanner(columns = 4:5, label = "Out-Party")
+
+```
+
+[TABLE I] presents the results of four simple linear regression models, estimating in-party and out-party feeling thermometers as a function of primary election outcome and survey-year control variables. [CITE THINKING SERIOUSLY ABOUT TIME] These results should not be used to predict precise marginal effect sizes for primary loss, but to establish directionality, showing numerically what [FIGURE] shows visually---supporting a losing candidate is associated with lower in-party feeling thermometers in both Republicans and Democrats. 
+
+Curiously, losing Democrats were slightly colder towards Republicans than their victorious co-partisans. There are several possible explanations for this feature which invite further study. First, partisans more likely to support losing candidates may also consider themselves more ideologically extreme, thus perceiving a larger ideological gap between their party and the out-party. This explanation is unconvincing.
+
+Were ideology a principal factor driving partisan affect, we should expect to see greater differences in the out-party density curves presented in [FIGURE]. For example, the vast majority of Democratic respondents in the 2008 ANES supported either Barack Obama or Hillary Clinton; despite Obama's presentation as a progressive alternative to Hillary Clinton from the left-wing of the party, there is essentially no difference in the distributions of out-party feeling thermometers between supporters of Clinton and Obama. Similarly, supporters of Bernie Sanders---a socialist---should be more ideologically distant from Republicans than their non-socialist peers, yet the out-party feeling thermometers of Sanders supporters were slightly higher on average than those of Clinton supporters in 2016.
+
+A more credible possibility is that primary losing partisans are simply more pessimistic about politics in general reporting colder inter-party affect as a result. As shown in [FIGURE], cold partisans are on average more pessimistic about the role of government, democracy, and the direction of the country. Such an explanation would dovetail neatly with recent scholarship which argues that what is often identified as inter-party affective polarization is better characterized as disdain for partisanship and political weariness more generally [@klar2018]. 
+
+The cross-sectional, observational data collected from the ANES show convincingly that there are affective differences  between primary winners and losers, but these analyses are limited in several crucial ways. First, using cross sectional data, we cannot distinguish between a world in which voters who dislike their party are more likely to favor candidates with dim electoral prospects. This is certainly plausible in the primary context in which the vast majority of voters are registered members of the relevant party [maybe add more here?]. The data presented above give us reason to doubt this hypothesis, as even supporters of of pro-party candidates (e.g., Hillary Clinton in 2008) exhibited hostility towards their party after the primary while supporters of the famously party-oppositional Donald Trump were among the most enthusiastic Republicans after the 2016 Primary.
+
+Second, even if causal precedence could be established, these data do not allow us to disentangle the impact of a primary win from a primary loss. As there is no untreated reference category who hold preferences for a primary candidate but who are unaware of the *results* of the primary, differences between winning and losing groups could follow from increased warmth among winners or coldness among losers. 
+
+## Panel Study
+
+To overcome this observational equivalence, I first draw on a panel study conducted as part of the 2008 National Annenberg Election Survey (NAES) by the Annenberg Public Policy Center. Respondents were surveyed across five waves from October 7, 2007 (pre-primary) to January 31, 2009 (post-innauguration). These panel data allow us to overcome the problem of observational equivalence inherent to cross-sectional data by estimating the treatment effect of supporting a losing candidate before and after their loss is apparent. 
+
+As the 2008 NAES does not solicit partisan feeling thermometers from respondents strong partisanship is used as an imperfect proxy for a partisan feeling thermometer on the grounds that those who identify as strong partisans unsurprisingly tend to report higher in-party feeling thermometers than their less strong and leaning co-partisans^[A table and figure which use ANES data to support this assumption are made available in this study's supporting information.].
+
+
+```{r, include=FALSE}
+
+gg_three_wave_df <- read_rds("data/gg-three-wave-str.rds")%>%
+  select(pid_3_1,
+         first_choice_dum_1,
+         wave_presump,
+         wave,
+         prop_strong,
+         se_strong)%>%
+  mutate(wave_norml = recode(wave_presump,
+                               "Before Presumptive" = "Wave 2 - Wave 1",
+                               "After Presumptive" = "Wave 3 - Wave 2"),
+         choice_dum = fct_rev(first_choice_dum_1)) %>%
+  glimpse()
+
+
+```
+```{r gg-three-wave}
+  
+gg_three_wave_df%>%
+ggplot(aes(x = choice_dum, y = prop_strong, color = pid_3_1)) +
+	geom_linerange(aes(ymin = prop_strong - 1.95*se_strong, ymax = prop_strong + 1.95*se_strong, color = pid_3_1)) +
+  geom_line(aes(x = as.numeric(choice_dum), color = pid_3_1)) +
+	geom_point(aes(shape = pid_3_1), size = 2) +
+	geom_hline(yintercept = 0) +
+	scale_color_manual(values = c("Democrat" = "dodgerblue3",
+																"Republican" = "firebrick3")) +
+	facet_wrap(vars(wave_norml)) +
+	theme(legend.position = c(0.12, 0.2)) +
+	coord_cartesian(ylim = c(-.25, .25)) +
+	labs(title = "Change in Proportion of Strong Partisans",
+			 subtitle = "Change Between Waves",
+			 x = "Primary Vote Choice",
+			 y = "Difference Between Waves",
+			 color = "Party ID at Wave 1",
+			 shape = "Party ID at Wave 1",
+			 caption = "Bootstrapped 95% CIs") +
+	scale_y_continuous(n.breaks = 10)
+
 ```
 
 
-## Experimental Data
+[FIGURE] shows the results of a three-wave-test of primary election outcome on strength of partisanship. Each point of the figure represents the change in the proportion of strong partisans present in each group between waves. The first panel shows the within-group change in strong partisanship between the two waves preceding the selection of a presumptive nominee in the relevant party's presidential primary. The second panel shows shows the change in strong partisanship within groups between the second (pre-treatment) wave and the third (post-treatment wave). The treatment in this case is the revelation of one candidate as the primary winner. Under this implementation of the three-wave-test, the average treatment effect (ATE) is calculated as the difference-in-difference in the proportion of strong partisans between winners and losers before and after the results of the primary election become clear:
 
-To gain some causal leverage over the question of primary election outcomes and partisans' affect, an original survey experiment is conducted, randomly assigning a primary election outcome to a counterfactual congressional primary election. The survey was programmed using the Qualtrics survey platform and participants were recruited using Amazon's *Mechanical Turk* (Mturk) platform.
+$$[\mu(w)_{3} - \mu(l)_{2}]-[\mu(w)_{2} - \mu(l)_{1}]$$
+where $\mu(w)_t$ is the proportion of strong partisans supporting a winning candidate at time $i$, $\mu(l)_t$ is the proportion of strong partisans supporting a losing candidate at time $t$ where all $t<3$ occurs pre-treatment and $t=3$ occurs post-treatment. A larger difference (a steeper slope) between winners and losers after the treatment is primed (after a presumptive nominee becomes apparent) suggests an effect of primary outcome on strength of partisanship.
+
+Tests which compare only the pre and post treatment absolute value of a quantity are vulnerable to confounding pre-treatment effects [@lenz2011]. Analysis of cross-sectional data is unable to establish causal precedence---a situation in which cold partisans gravite towards ill-equipped primary candidates is observationally equivalent to one in which a primary loss causes individuals to dislike their party. By comparing the "effect" of a primary outcome before and after the outcome is known, unobserved pre-treatment differences are cancelled out.
+
+
+## Survey Experiment
+
+
+To gain further causal leverage over the question of primary election outcomes and partisans' affect, an original survey experiment is conducted, randomly assigning a primary election outcome to a counterfactual congressional primary election. The survey was programmed using the Qualtrics survey platform and participants were recruited using Amazon's *Mechanical Turk* (Mturk) platform.
 
 ### Experimental Design
 
 [outline hypotheses for experiment]
 
-After agreeing to partipate in the survey, subjects are asked to divulge their partisan affiliation. Subjects who self-identified as political independents were asked towards which party they tended to lean. Following the insight of @klar2017independent that leaning independents are best understood as "secret partisans", leaning independents were coded as partisans of whichever party they indicated a preference towards. Those who did not indicate a preference were excluded from all subsequent analyses---while the attitudes and actions of these true independents are no doubt important, they fall outside the scope conditions of this investigation.
+The cross sectional 
+
+After agreeing to partipate in the survey, subjects are asked to divulge their partisan affiliation. Subjects who self-identified as political independents were asked towards which party they tended to lean. Following the insight of @klar2016independent that leaning independents are best understood as "secret partisans", leaning independents were coded as partisans of whichever party they indicated a preference towards. Those who did not indicate a preference were excluded from all subsequent analyses---while the attitudes and actions of these true independents are no doubt important, they fall outside the scope conditions of this investigation.
 
 Next, participants were shown vignettes of two candidates and told that these candidates had competed against one another in a 2020 congressional primary election for the participant's party. The names of these candidates were drawn from a pool of Democratic and Republican candidates who had each participated in a congressional primary for an open seat in a district in which an out-party candidate eventually won election. In other words, none of the candidates whose names were used were members of congress during or after the 2020 election cycle. This set of names was chosen to minimize the chance of participants recognizing the candidates. Additionally, though it is unlikely that participants recruited through MTurk would seek out external information for a task, the use of general-election losing non-incumbents' names reduces the accessibility of official policy statements, platforms, or campaign materials.
 
@@ -616,7 +742,7 @@ To disentangle a *positive* effect of a primary victory from a *negative* effect
 $$
 [Therm] = Win + Loss
 $$
-The first model tests the effects of primary election loss and victory on in-party thermometer ratings. As expected, primary losers are colder towards their party than those who had no information about the primary's outcome. The relatively small effect size ($\hat{\beta} \approx -3.5$) is both unsurprising and unconcerning for the purposes of this study. The experimental treatment is likely much weaker than a real-world primary loss. Using this analysis to estimate a precise effect size of primary outcome on partisan affect would be inappropriate. Rather, the test should be taken more generally as evidence that losing a primary decreases positive feelings for one's own party by some amount.
+The first model tests the effects of primary election loss and victory on in-party thermometer ratings. As expected, primary losers are colder towards their party than those who had no information about the primary's outcome. The relatively small effect size ($\hat{\beta} \approx -3.5$) is both unsurprising and unconcerning for the purposes of this study. The experimental treatment is likely much weaker than a real-world primary loss. Using this analysis to estimate a precise effect size of primary outcome on partisan affect would be inappropriate. Rather, the test should be taken more generally---as evidence that losing a primary decreases positive feelings for one's own party by some amount.
 
 
 ```{r therms-exp}
@@ -659,9 +785,8 @@ list("Inparty" = lm(therm_inparty ~ group, data = m_df),
 
 ```
 
-If primary outcomes affected partisans' appraisals of the political system more broadly we should expect to see complementary effects across attitudes towards groups beyond participants' in-party.  Tests of the effect of primary outcome on out-party attitudes and attitudes towards political independents are insignificant, providing no evidence that primary elections 
+If primary outcomes affected partisans' appraisals of the political system more broadly we should expect to see complementary effects across attitudes towards groups beyond participants' in-party, as observed in the cross-sectional primary election data analyses [cite figs]. No such effects are observed. Under these experimental conditions primary outcomes do not appear to affect attitudes towards independents or the out-party. The partisan disdain hypothesis is therefore unsupported by this experiment. 
 
-# Results
 
 A
 ```{r political-efficacy-exp}
@@ -682,6 +807,9 @@ modelsummary(output = "gt",
 						 gof_map = gm_2,
 						 stars = TRUE)
 ```
+
+Next, I compare primary winners to primary losers on three political efficacy items---self-reported likelihood of voting in a general election, satisfaction with democracy, and trust in government---testing the hypothesis that those who support a losing candidate will exhibit lower political efficacy, being less likely to cast a vote, less trusting of government, and less satisfied with democracy.
+
 
 
 ```{r ft-difs, fig.height=8.5, fig.width=4, fig.align='center'}
